# perguntas-tdah

./: .gitignore  README.md  changelog.md  perguntas_tdah.json  pyproject.toml
perguntas_tdah/: faz_pergunta.py
