[tool.poetry]
name = "perguntas-tdah"
version = "0.0.0"
description = "72 Perguntas para TDAH"
authors = [{name = "Kyle Felipe", email = "kylefelipe@gmail.com"}]
readme = "README.md"
packages = [{ include = "perguntas_tdah", from = "." }]

[project.urls]
repository = "https://github.com/kylefelipe/perguntas-tdah.git"
homepage = "https://github.com/kylefelipe/perguntas-tdah"
keywords = ["tdah", "perguntas", "perguntas tdah", "tdah perguntas"]
issues = "https://github.com/kylefelipe/perguntas-tdah/issues"
changelog = "https://github.com/kylefelipe/perguntas-tdah/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pergunta-tdah = "perguntas_tdah.faz_pergunta:main"
